--- a/DojosAndNinjas/flask_app/templates/newcourse.html
+++ b/DojosAndNinjas/flask_app/templates/newcourse.html
@@ -16,29 +16,34 @@
             <a class="mt-lg-4" href="/register">Register a Ninja to Course</a>
         </div>
         <div class="col-md-8 d-flex justify-content-around">
-            <form action="/course/new" method="POST" class="m-3">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" name="name" id="name">
+            <div>
+                <div>
+                    {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+                        {% if messages %}                            <!-- check if there are any messages -->
+                            {% for message in messages %}            <!-- loop through the messages -->
+                                <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                <form action="/course/new" method="POST" class="m-3">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" name="name" id="name">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
             <table class="table mt-lg-3 table-striped m-3">
                 <thead>
                     <th>ID</th>
                     <th>Name</th>
-                    <!-- <th>Action</th> -->
-                
                 </thead>
                 <tbody>
                     {%for course in courses%}
                     <tr>
                         <th>{{course.id}}</th>
                         <td><a href="/course/{{course.id}}">{{course.name}}</a></td>
-                        <!-- <td>
-                            <a href="/edit/{{course.id}}">Edit</a>
-                            <a href="/delete/{{course.id}}">Delete</a>
-                        </td> -->
                     </tr>
                     {%endfor%}
                 </tbody>
