--- a/DojosAndNinjas/flask_app/templates/newninja.html
+++ b/DojosAndNinjas/flask_app/templates/newninja.html
@@ -16,6 +16,15 @@
             <a class="mt-lg-4" href="/register">Register a Ninja to Course</a>
         </div>
         <div class="col-md-8">
+            <div>
+                {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+                    {% if messages %}                            <!-- check if there are any messages -->
+                        {% for message in messages %}            <!-- loop through the messages -->
+                            <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>
             <form action="/ninja/new" method="POST" class="m-3">
                 <div class="mb-3">
                     <label for="first_name" class="form-label">First Name</label>
